Minor updates mostly to API (javadoc). Some minor updates to Timer and BenchmarkTest